# simple-interpreter

./: .gitignore  CMakeLists.txt  Makefile  output1  output2
src/: lex.c  lex.h  main.c  parse.c  parse_format.c
tests/: arraysum-simple.txt  arraysum-simple2.txt
